<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:layout_gravity="center"
    android:background="@color/royalBlueDark"
    android:orientation="vertical"
    tools:context=".activities.EnterPasscodeActivity">

    <ImageView
        android:id="@+id/nahoft_message_bottle"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/nahoft_logo_full_colour_104" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="24dp"
        android:fontFamily="@font/open_sans_italic"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/enter_passcode"
        android:textSize="16sp"
        android:textColor="@color/colorWarmWhite">

    </TextView>

    <LinearLayout
        android:id="@+id/passcodeContainer"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/passcode_digit_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="numberPassword|number"
            android:maxLength="1"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorWarmWhite"
            app:backgroundTint="@color/colorWarmWhite" />

        <EditText
            android:id="@+id/passcode_digit_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="numberPassword|number"
            android:maxLength="2"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorWarmWhite"
            app:backgroundTint="@color/colorWarmWhite" />

        <EditText
            android:id="@+id/passcode_digit_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="numberPassword|number"
            android:maxLength="2"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorWarmWhite"
            app:backgroundTint="@color/colorWarmWhite" />

        <EditText
            android:id="@+id/passcode_digit_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="numberPassword|number"
            android:maxLength="2"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorWarmWhite"
            app:backgroundTint="@color/colorWarmWhite" />

        <EditText
            android:id="@+id/passcode_digit_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="numberPassword|number"
            android:maxLength="2"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorWarmWhite"
            app:backgroundTint="@color/colorWarmWhite" />

        <EditText
            android:id="@+id/passcode_digit_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="numberPassword|number"
            android:maxLength="2"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorWarmWhite"
            app:backgroundTint="@color/colorWarmWhite" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/login_button"
            android:layout_width="104dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding_standard"
            android:background="@drawable/blue_56_btn_bkgd"
            android:fontFamily="@font/open_sans"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="@color/colorWarmWhite" />

    </LinearLayout>

</LinearLayout>